# tranquility

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  applications.md  build  deny.toml  install  linux.md  run  test.json  uninstall  update  version.sh
.cargo/: config.toml
.github/: enforce-dev-to-main.yml
MacOS/: mac.sh  macsetup.sh  terminal.sh
cli/: Cargo.toml
cli/src/: application-schema.json  applications.json  applications.rs  args.rs  categories.rs  common.rs  config.rs  fonts.rs  installer.rs  json.rs  libs.rs  logger.rs  logging.rs  main.rs  main.rs.clap.bk  models.rs  package_manager.rs  print.rs  system.rs  vps.rs
cli/src/command/: config.rs  doctor.rs  font.rs  init.rs  logs.rs  mod.rs
cli/src/command/apps/: install.rs  mod.rs  uninstall.rs
cli/src/command/vps/: mod.rs
cli/src/model/: application.rs  categories.rs  config.rs  mod.rs  package_manager.rs  system.rs  vps.rs
cli/src/os/: mod.rs
cli/src/os/linux/: arch.rs  debian.rs  fedora.rs  mod.rs  ubuntu.rs
cli/src/os/macos/: mod.rs
cli/src/os/windows/: mod.rs
cli/src/schema/: application.rs  applications.md  config.rs  mod.rs
cli/src/shell/: command.rs  mod.rs  runner.rs  runners.rs  script_runner.rs
cli/src/tests/: schema_tests.rs
cli/src/tests/fixtures/: invalid_applications.yaml  valid_applications.xml  valid_applications.yaml
docs/: mkdocs.yml
linux/: arch.sh  debian.sh  fedora.sh
schema/: applications-schema.json  applications-schema.xml
scripts/: checkos.sh  macsetup.sh  multiselect  shell.sh  vm.sh
src/: lib.rs  main.rs
tests/: schema_tests.rs
(+70 files in other folders)
