[package]
name = "tranquility"
version = "0.0.1"
edition = "2024"

[dependencies]
chrono = "0.4.42"
clap = { version = "4.5.53", features = ["derive"] }
dirs = "6.0.0"
jsonschema = "0.38.1"
once_cell = "1.21.3"
quick-xml = { version = "0.39.0", features = ["serialize"] }
schemars = "1.1.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
serde_yaml = "0.9.34"
strum = { version = "0.27.2", features = ["derive"] }
tabled = "0.20.0"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
os_info = "3.13.0"
colored = "3.0.0"
bitflags = "2.10.0"
dialoguer = "0.12.0"
shellexpand = "3.1.1"
zip = "7.0.0"
heck = "0.5.0"
sysinfo = "0.37.2"
figlet-rs = "0.1.5"
tempfile = "3.23.0"
thiserror = "2.0.17"
