[package]
name = "tranquility"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.38", features = ["derive"] }
colored = "3.0.0"
os_info = "3.11.0"
once_cell = "1.21.3"
bitflags = "2.9.1"
dialoguer = "0.11.0"
figlet-rs = "0.1.5"
tabled = "0.19.0"
jsonschema = "0.30.0"
serde_json = "1.0.140"
serde = { version ="1.0.219", features = ["derive"] }
dirs = "6.0.0"
sysinfo = "0.35.1"
shellexpand = "3.1.1"
tempfile = "3.20.0"
strum = { version = "0.27", features = ["derive"] }
heck = "0.5.0"
chrono = "0.4.41"
